# bitExactnessOpenCL

./: CMakeLists.txt  LICENSE  README.md  main.cpp
